--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -29,3 +29,4 @@ jobs:
           push: true
           # This creates a tag like: ghcr.io/your-username/your-repo-name:latest
           tags: ghcr.io/${{ github.repository }}:latest
+          no-cache: true  # Add this to bypass stuck layers
